# cortex-protocol

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
bench/: README.md
bench/agent_uplift/: RESULTS.md  __init__.py  harness.py  scenarios.py
bench/cortex_bench/: __init__.py  dataset.py  judge.py  locomo.py  memory_system.py  metrics.py  run.py
bench/cortex_bench/systems/: __init__.py  _common.py  cortex_system.py  full_context.py  naive_rag.py  stub.py
bench/results/: E1_failure_autopsy.md  LOCOMO_results.md  PHASE1_3_baselines.md  PHASE2_checkpointC.md  PHASE3_authoritative.md  leaderboard_research.md  vertex_rerank_results.md
bench/results/a1_af8k_full500/: cortex-v0_s_hypotheses.jsonl  cortex-v0_s_results.json
bench/results/locomo_k100_full/: cortex-v0_locomo_hypotheses.jsonl  cortex-v0_locomo_results.json
bench/scale/: latency_harness.py  pgvector_latency.py
docs/: ARCHITECTURE.md  L6_Decades_Scale.md  api.md  decades-scale.md  index.md
examples/: README.md  custom_provider.py  mcp.json  quickstart.py
packaging/mcpb/: README.md  manifest.json
server/cortex/: __init__.py  memory.py  profiles.py
server/cortex/mcp/: __init__.py  server.py
server/cortex/providers/: __init__.py  base.py  caching.py  fake.py  gemini.py
server/cortex/reader/: __init__.py  reader.py
server/cortex/retrieve/: __init__.py  hybrid.py
server/cortex/store/: __init__.py  base.py  memory_store.py  sqlite_store.py
tests/: conftest.py  test_a_plus_bench.py  test_a_plus_engine_store.py  test_a_plus_mcp_provider.py  test_a_plus_reader.py  test_agent_uplift.py  test_antisaturation.py  test_baselines.py  test_caching.py  test_cortex_system.py  test_dataset.py  test_episodic.py  test_graph_extract.py  test_graph_store.py  test_harness.py  test_hybrid.py  test_judge.py  test_locomo.py  test_mcp_server.py  test_mcp_wiring.py  test_memory.py  test_metrics.py  test_profiles.py  test_property.py  test_providers.py  test_retry.py  test_run_tier.py  test_sampling.py  test_sqlite_store.py  test_store.py
